update podcast pages, links and descriptions

--- a/docs/podcasts/README.mdx
+++ b/docs/podcasts/README.mdx
@@ -5,10 +5,11 @@ title: Linux Foundation Community Podcasts
 
 # Linux Foundation Community Podcasts
 
-Listen to the latest Linux Foundation [OWASP Podcast Series](https://soundcloud.com/owasp-podcast/) where Wendy Nather and Matt Tesauro explore [Fast Times at SBOM High](https://soundcloud.com/owasp-podcast/fast-times-at-sbom-high-with-wendy-nather-and-matt-tesauro), alongside Tanya Janca as [She Hacks Purple](https://soundcloud.com/owasp-podcast/tanya-janca). Find the lastest [OWASP Podcast Series](https://soundcloud.com/owasp-podcast/) below.
+Listen to the latest episodes from The Linux Foundation ["The Untold Stories of Open Source"](https://untold-stories-of-open-source.captivate.fm/spotify) podcast below.
 
-| Episode                                                                                                                                                                                                                             | Title                                                                                     |
-| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------- |
-| [![Fast Times at SBOM High with Wendy Nather and Matt Tesauro](https://i1.sndcdn.com/artworks-w7oWbUxpTRdyNtXX-KOVXDw-t67x67.jpg)](https://soundcloud.com/owasp-podcast/fast-times-at-sbom-high-with-wendy-nather-and-matt-tesauro) | [Fast Times at SBOM High with Wendy Nather and Matt Tesauro](fast-times-at-sbom-high.mdx) |
-| [![SAFe or UnSAFe at Any Speed](https://i1.sndcdn.com/artworks-YZmEbDMcCChMjj6A-IezvvA-t67x67.jpg)](https://soundcloud.com/owasp-podcast/safe-of-unsafe-at-any-speed)                                                               | [SAFe or UnSAFe at Any Speed](safe-or-unsafe-at-any-speed.mdx)                            |
-| [![Tanya Janca - She Hacks Purple](https://i1.sndcdn.com/artworks-4gWbGDUEBZizgpQ9-YIcfzg-t67x67.jpg)](https://soundcloud.com/owasp-podcast/tanya-janca)                                                                            | [Tanya Janca - She Hacks Purple](https://soundcloud.com/owasp-podcast/tanya-janca)        |
+| Episode                                                                                                                                                | Title                                                                                          |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------- |
+| [![Patrick Debois on the Business of Open Source](../images/logo-100-100.png)](https://open.spotify.com/episode/3MKsXkw9Et5B9bGLWKJNpc)                | [Patrick Debois on the Business of Open Source](business-of-open-source.mdx)                   |
+| [![Brian Behlendorf and the OpenSSF Project](../images/logo-100-100.png)](https://open.spotify.com/episode/0P0cjBDn5nSYPe1i0FrFXr)                     | [Brian Behlendorf and the OpenSSF Project](openssf-project.mdx)                                |
+| [![Priyanka Sharma, GM, CNCF](../images/logo-100-100.png)](https://open.spotify.com/episode/5KgqNXHHV0y03yjgg7kg8E)                                    | [Priyanka Sharma, GM, CNCF](priyanka-sharma-gm-cncf.mdx)                                       |
+| [![An Introduction to the new Podcast from the Linux Foundation](../images/logo-100-100.png)](https://open.spotify.com/episode/62DAkdeQTSAPeLbxF2sTlX) | [An Introduction to the new Podcast from the Linux Foundation](introduction-to-lf-podcast.mdx) |
