--- a/docs/README.mdx
+++ b/docs/README.mdx
@@ -11,19 +11,11 @@ The Linux Foundation Podcast - Interviews with LF Project Leads and Open Source 
 
 ### Latest Linux Foundation Podcasts on SoundCloud
 
-Listen to the latest Linux Foundation [OWASP Podcast Series](https://soundcloud.com/owasp-podcast/) where Wendy Nather and Matt Tesauro explore [Fast Times at SBOM High](https://soundcloud.com/owasp-podcast/fast-times-at-sbom-high-with-wendy-nather-and-matt-tesauro), alongside Tanya Janca as [She Hacks Purple](https://soundcloud.com/owasp-podcast/tanya-janca). Find the lastest [OWASP Podcast Series](https://soundcloud.com/owasp-podcast/) below.
-
-<VideoPlayer scsrc="https://user-images.githubusercontent.com/6029572/165732703-0f3efb8e-a1c4-43f1-b5a2-fe4b8ad3ede4.mp4" />
-
-https://user-images.githubusercontent.com/6029572/165732703-0f3efb8e-a1c4-43f1-b5a2-fe4b8ad3ede4.mp4
+Listen to the latest Linux Foundation ["The Untold Stories of Open Source"](https://untold-stories-of-open-source.captivate.fm/spotify).
 
 ## What the project does
 
 The Linux Podcast Project is a public podcast, highlight projects and people using open source. In addition, the podcast will regularly feature updates on project from project leads and contributors
-
-<VideoPlayer scsrc="https://user-images.githubusercontent.com/6029572/165733019-648c3990-6c8b-45e6-a5c4-f4ec58ff2eee.mp4" />
-
-https://user-images.githubusercontent.com/6029572/165733019-648c3990-6c8b-45e6-a5c4-f4ec58ff2eee.mp4
 
 ## Why the project is useful
 
