--- a/docs/podcasts/business-of-open-source.mdx
+++ b/docs/podcasts/business-of-open-source.mdx
@@ -16,7 +16,7 @@ import { podcasts } from "@site/src/components/podcasts";
 | --------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------- | :-----------------------------------------------------------: |
 | [![Patrick Debois on the Business of Open Source](../images/logo-100-100.png)](https://open.spotify.com/episode/3MKsXkw9Et5B9bGLWKJNpc) | [Patrick Debois on the Business of Open Source](https://open.spotify.com/episode/3MKsXkw9Et5B9bGLWKJNpc) | [>>](https://open.spotify.com/episode/3MKsXkw9Et5B9bGLWKJNpc) |
 
-**Tue, 24 May 2022 02:15:00 -0400**
+**Tue, 24 May 2022**
 
 The first time Patrick Debois came into contact with Open Source was in the early stages of development of the Linux kernel, compiling it on floppies on his 486 machine. To tell you how long ago that was, the Intel 486 was introduced in 1989, It was the first chip in the line to include a built-in math coprocessor.
 
